fix: modal too close to bottom on phones

--- a/src/styles.css
+++ b/src/styles.css
@@ -1433,6 +1433,10 @@ input[type="text"].note-toolbar-setting-error {
     }
 }
 
+.is-phone .note-toolbar-setting-dialog-phonefix {
+    padding: 1em;
+}
+
 .note-toolbar-setting-mini-dialog {
     width: calc(var(--dialog-width) / 1.5);
 }
